gitignore and While loop fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 #make it not committ updates to past_char.txt, save.text and chara_det.json
+git rm --cached past_char.txt
+git rm --cached save.txt
+git rm --cached chara_det.json
 .past_char.txt
 .save.txt
 .chara_det.json
